Updating appendix and README.md

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -6,7 +6,7 @@ author:
 date: today
 date-format: long
 thanks: "Code and data are available at [https://github.com/SameeckBhatia/Seattle-Real-Estate](https://github.com/SameeckBhatia/Seattle-Real-Estate)"
-abstract: "This paper develops a transparent property valuation model for Seattle’s real estate market, using Redfin data and statistical techniques to estimate intrinsic property values. The model highlights key factors influencing prices, including amenities, neighborhood characteristics, and socio-economic trends, offering an accessible tool for informed decision-making. Results show higher prediction errors for high-value properties and reveal time-related trends, with vintage homes gaining value due to historical significance. Spatial analysis captures disparities in property values, reflecting income and infrastructure differences across neighborhoods."
+abstract: "This paper develops a transparent property valuation model for Seattle’s real estate market, using Redfin data and statistical techniques to estimate intrinsic property values. Results show higher prediction errors for high-value properties and uncover time-related trends, with vintage homes gaining value due to historical significance. Spatial analysis captures disparities in property values, reflecting income and infrastructure differences across neighborhoods. The model highlights key factors influencing prices, including amenities, neighborhood characteristics, and socio-economic trends, offering a tool for informed decision-making by buyers and sellers."
 toc: true
 number-sections: true
 bibliography: references.bib
@@ -37,7 +37,7 @@ library(sf)
 
 # Introduction
 
-Seattle’s real estate market has experienced significant fluctuations since the start of the millennium. Despite these booms and busts, property prices in Seattle remain among the highest in the United States [@jones]. Demand has steadily increased, and even during periods of lower demand, the market continues to attract buyers. At current price levels, more potential homebuyers are seeking reliable information to find the best deals. With advancements in technology and the increasing availability of data, tools for assessing property values have become essential. One critical tool is an estimate of a property’s fair value, which can help buyers determine whether they are overpaying or underpaying relative to the market.
+Seattle’s real estate market has experienced significant fluctuations since the start of the millennium. Despite these booms and busts, property prices in Seattle remain among the highest in the United States [@jones]. Demand has steadily increased, and even during periods of lower demand, the market continues to attract buyers. At current price levels, more potential homebuyers are seeking reliable information to find the best deals. With advancements in technology and the increasing availability of data, tools for assessing property values have become essential. One important tool is an estimate of a property’s fair value, which can help buyers determine whether they are overpaying or underpaying relative to the market.
 
 This paper focuses on developing an accurate and accessible property valuation model tailored to Seattle’s housing market. The model incorporates current market data to provide fair value estimates for individual properties. The goal is to inform readers about the key factors driving real estate prices in Seattle while empowering them with a tool to make better home-buying decisions. By applying machine learning and statistical techniques, the model aims to ensure accuracy and reflect the intrinsic value of properties rather than merely their market prices. Existing valuation tools, such as Zillow’s “Zestimate” [@zillow] and Redfin’s proprietary estimates, have limitations. These models are often closed-source, leaving potential users unable to access the methodology or even the results without cost. This creates a significant gap in the availability of open, free, and transparent valuation tools. The absence of such tools denies buyers the advantage of comprehensive, unbiased information to assess property values independently. To address this gap, data was collected from Redfin’s semi-public dataset on current Seattle property listings. The analysis was conducted using the R programming language for data cleaning, testing, model creation, and result interpretation.
 
@@ -279,10 +279,13 @@ testing_data |>
   geom_boxplot(
     position = position_dodge(0.6), 
     color = "black", 
-    width = 0.5,
     outlier.shape = 15, 
-    outlier.size = 0.5
+    width = 0.5,
+    outlier.size = 0
   ) +
+  geom_point(size = 0.5, 
+             shape = 15,
+             position = position_dodge(0.6)) +
   scale_y_continuous(limits = c(0, 7)) +
   coord_flip() +
   scale_fill_manual(values = c("grey70", "#519C7C")) +
@@ -381,19 +384,19 @@ testing_data |>
 
 The integration of algorithmic estimates like Zillow’s Zestimate into real estate markets offers potential to reduce racial biases in property valuation [@yu]. Historically, systemic practices such as redlining have resulted in undervaluation of properties in minority neighborhoods, reinforcing economic disparities. The Zestimate, which aggregates data from multiple sources and provides consistent valuations across neighborhoods, appears less influenced by these historical biases. As a public and standardized information source, it helps market participants align on property values, leading to reduced racial disparities in final sale prices compared to initial list prices. This effect is especially meaningful in addressing the “white premium” often observed in traditional valuation methods.
 
-However, while the Zestimate mitigates some biases, it does not entirely eliminate racial inequities in the housing market. Factors like historical undervaluation and socio-economic disparities remain deeply embedded, requiring more targeted interventions beyond algorithmic tools. Moreover, reliance on algorithmic estimates can sometimes oversimplify the nuanced factors that influence property values, such as cultural significance or community dynamics, which are more difficult to quantify. Nevertheless, the use of transparent and publicly available valuation tools represents a positive step toward a more equitable real estate market.
+However, while the Zestimate mitigates some biases, it does not entirely eliminate racial inequities in the housing market. Factors like historical undervaluation and socio-economic disparities remain deeply embedded, requiring more targeted interventions beyond algorithmic tools. Moreover, reliance on algorithmic estimates can sometimes oversimplify the complex factors that influence property values, such as cultural significance or community dynamics, which are more difficult to quantify. Nevertheless, the use of transparent and publicly available valuation tools represents a positive step toward a more equitable real estate market.
 
 ## Using Alternative Algorithms for Nonlinear Price Trends
 
-Machine learning techniques have become invaluable for modeling non-linear trends in property prices, capturing the complex relationships between property characteristics, location, and market factors. Traditional methods, such as linear price models, often struggle with these complexities, especially when spatial dependencies at regional levels influence property values. Advanced algorithms like Random Forest and Gradient Boosting have shown promise in addressing these challenges. By using data at finer geographical scales, such as statistical sub-areas, these models achieve greater accuracy, particularly when predicting price differences between housing types like apartments and standalone homes. This spatially informed approach helps stakeholders understand localized price trends and refine policy-making [@gao].
+Machine learning has become a fundamental method for modeling non-linear trends in property prices, capturing the complex relationships between property characteristics, location, and market factors. Traditional methods, such as linear price models, often struggle with these complexities, especially when spatial dependencies at regional levels influence property values. Advanced algorithms like Random Forest and Gradient Boosting have shown promise in addressing these challenges. By using data at finer geographical scales, such as statistical sub-areas, these models achieve greater accuracy, particularly when predicting price differences between housing types like apartments and standalone homes. This spatially informed approach helps stakeholders understand localized price trends and refine policy-making [@gao].
 
 Emerging methods like Artificial Neural Networks and Fuzzy Inference Systems further enhance the ability to capture non-linear patterns in real estate data. Recent developments in fuzzy regression techniques have demonstrated superior performance in predicting prices while maintaining lower computational costs compared to older models. These approaches excel at interpreting complex interactions between pricing attributes and property values, offering improved precision even for less structured data like textual property descriptions. Such innovations highlight the growing potential of machine learning to address long-standing challenges in real estate valuation, providing better tools for buyers, sellers, and policymakers to navigate market dynamics [@sarip].
 
 ## Including External Factors into Property Valuation Models
 
-Incorporating external environmental factors into property valuation models offers valuable advantages, such as a more comprehensive understanding of real estate prices influenced by location-specific qualities [@din] [@abelson]. Geographic information systems (GIS) provide detailed data on factors like neighborhood quality, proximity to amenities, and environmental conditions, enabling models to quantify their impact on property values. For example, positive attributes such as good views or access to shops can enhance valuation, while disamenities like noise pollution may reduce it. These factors add depth to traditional models, ensuring they reflect localized preferences and market trends, which is particularly helpful for urban planning and decision-making.
+Incorporating external environmental factors into property valuation models offers great advantages, such as a more comprehensive understanding of real estate prices influenced by location-specific qualities [@din] [@abelson]. Geographic information systems (GIS) provide detailed data on factors like neighborhood quality, proximity to amenities, and environmental conditions, enabling models to quantify their impact on property values. For example, positive attributes such as good views or access to shops can enhance valuation, while disamenities like noise pollution may reduce it. These factors add depth to traditional models, ensuring they reflect localized preferences and market trends, which is particularly helpful for urban planning and decision-making.
 
-However, using external factors also poses challenges. Data collection for environmental parameters is resource-intensive and may require frequent updates to stay relevant. Additionally, interpreting these factors can be complex, as their effects vary by region and buyer priorities. For instance, while some buyers prioritize neighborhood aesthetics, others might value proximity to public transport more. Simplifying these influences into a single measure, like a geo-index, may overlook important nuances, leading to inaccuracies in valuation. Furthermore, reliance on advanced tools like artificial neural networks increases model complexity, requiring specialized expertise and computational power, which may not be feasible for all users.
+However, using external factors also poses challenges. Data collection for environmental parameters is resource-intensive and may require frequent updates to stay relevant. Additionally, interpreting these factors can be complex, as their effects vary by region and buyer priorities. For instance, while some buyers prioritize neighborhood aesthetics, others might value proximity to public transport more. Simplifying these influences into a single measure, like a geo-index, may overlook important complexities, leading to inaccuracies in valuation. Furthermore, reliance on advanced tools like artificial neural networks increases model complexity, requiring specialized expertise and computational power, which may not be feasible for all users.
 
 \newpage
 
@@ -462,13 +465,11 @@ plot(fitted(final_model), resid(final_model), cex = 0.5,
 qqnorm(resid(final_model), cex = 0.5);qqline(resid(final_model))
 ```
 
-**TO-DO:** @fig-diagnostics ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
+@fig-diagnostics presents the residual-fitted and quantile-quantile plots for the final model, used to assess the validity of linear regression assumptions. These diagnostics were conducted to identify any violations of key assumptions. Notably, two primary assumptions were tested, and one key modification was made to the model to improve its fit to the data. Specifically, the model was fitted using the analysis data with imputed price values to the $95^{th}$ percentile, addressing the presence of significant price outliers in the dataset. This adjustment is evident in the diagonal line appearing to the right in the residual-fitted plot. The imputation process resulted in a substantial increase in the model's $R^2$, rising from approximately 0.28 to 0.72, as detailed in @sec-model. The primary assumption violations observed were related to constant conditional variance and normally distributed errors. These issues are reflected in the left plot, where fanning indicates non-constant variance, and deviations from the diagonal line suggest departures from normality. To address these violations, transformations of the variables, such as using power terms, could be considered; however, this would compromise the model's interpretability. For the final model, interpretability was prioritized, with transformations remaining a topic for future exploration.
 
 ## Alternate Model Summaries
 
-**TO-DO:** @tbl-models ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae pretium velit. Etiam fermentum enim ac venenatis fringilla. Nulla imperdiet metus ac ligula ultricies, at cursus eros varius. Curabitur commodo pretium ornare. Pellentesque ultrices sapien ut lectus viverra placerat. Mauris nec interdum tortor. Cras posuere turpis sed mi blandit dictum. Etiam accumsan ipsum quis sem ornare cursus. Aenean ligula mauris, vulputate a volutpat dapibus, consectetur a lacus. Nullam ornare placerat risus, in luctus urna. Ut molestie dignissim turpis, eget tincidunt arcu. Vivamus auctor fermentum lectus, eu vulputate tortor volutpat et. Aenean aliquam nulla eget felis faucibus faucibus ut nec nisi.
+@tbl-models presents the model summaries for both the full and reduced models. The full model includes all the variables in the analysis data, while the reduced model excludes the beds and baths variables. The coefficients of the two models are very similar, but the standard errors of these coefficients are slightly lower in the reduced model, suggesting lower uncertainty in the valuations. Regarding the goodness-of-fit metrics, the $R^2$ scores are also very similar, though the RMSE has increased. However, the reduced number of variables in the latter model results in adjusted $R^2$ scores that are essentially the same.
 
 ```{r #tbl-models}
 modelsummary(list(
