Completing the appendix

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -6,7 +6,7 @@ author:
 date: today
 date-format: long
 thanks: "Code and data are available at [https://github.com/SameeckBhatia/Seattle-Real-Estate](https://github.com/SameeckBhatia/Seattle-Real-Estate)"
-abstract: "This paper develops a transparent property valuation model for Seattle’s real estate market, using Redfin data and statistical techniques to estimate intrinsic property values. Results show higher prediction errors for high-value properties and uncover time-related trends, with vintage homes gaining value due to historical significance. Spatial analysis captures disparities in property values, reflecting income and infrastructure differences across neighborhoods. The model highlights key factors influencing prices, including amenities, neighborhood characteristics, and socio-economic trends, offering a tool for informed decision-making by buyers and sellers."
+abstract: "This paper develops a transparent property valuation model for Seattle’s real estate market, using Redfin data and machine learning techniques to estimate intrinsic property values. Results show higher prediction errors for high-value properties and the importance of property age as well as amenities in determining valuation. Additionally, spatial analysis captures the influence of environmental factors on property values, reflecting income and infrastructure differences. These findings help buyers and sellers understand what drives property prices, supporting informed decision-making to navigate a competitive market."
 toc: true
 number-sections: true
 bibliography: references.bib
@@ -484,15 +484,26 @@ modelsummary(list(
 
 # Surveys, Sampling, and Observational Data
 
-**TO-DO:** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu hendrerit mauris, in sodales mi. Aenean eget urna rutrum, tristique lorem vel, maximus ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc eget rutrum est. Donec tempor elit non nulla cursus, in consectetur est ullamcorper. Nam vitae porttitor felis, tempor maximus leo. Aenean ultricies molestie facilisis. Donec eget gravida eros, sit amet ornare erat. Cras a vehicula nibh. Nunc ac ligula malesuada, bibendum ante eu, luctus felis. Proin in tellus eu diam aliquam ultricies.
+This study uses observational data to estimate the intrinsic value of properties in Seattle based on specific parameters. However, observational data has limitations that can reduce valuation accuracy. For instance, deviations from the line of equality in @fig-scatter highlight discrepancies arising from factors not captured in the model. Some of these factors are difficult or impossible to measure through observational data alone, whether due to privacy concerns, challenges in data collection, or insufficient information. Surveys provide a valuable way to address these gaps by collecting additional data, which can help reduce the uncertainty in the model outlined in @sec-model. For example, surveys could capture qualitative and subjective information, such as owners’ expectations of future market trends or personal motivations for selling, that cannot be inferred from observational data.
 
-Duis sit amet augue sagittis, commodo eros sollicitudin, congue libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas convallis erat velit, eu consequat massa posuere et. Nullam tempor purus sit amet quam lacinia euismod. Praesent sagittis risus sit amet odio porttitor, eget pellentesque turpis luctus. Proin feugiat convallis diam, id vulputate mauris. Nunc facilisis quam nec tristique pellentesque. Sed laoreet tortor at ipsum faucibus iaculis. Sed cursus convallis molestie. Aliquam et accumsan tortor. Morbi volutpat rutrum elit sed fermentum. In vestibulum placerat eros, et consectetur lacus fringilla a. Mauris elementum velit vel eros placerat, eget commodo nisi convallis. Sed ac nisi mi. Nullam malesuada auctor semper.
+Relying solely on appraiser data presents another challenge—it often lacks the depth and variety that independent surveys can offer. Appraiser datasets generally focus on tangible features of the property (e.g., square footage, number of rooms) but overlook contextual or personal factors. Independent surveys can fill this gap by gathering details such as a seller's financial situation, their previous purchase price, or even their current perception of market conditions. Additionally, surveys could include questions about less commonly recorded property features like energy efficiency upgrades, aesthetic renovations, or even historical significance, which could significantly influence valuation. By incorporating such data into the model, a better understanding of the factors shaping a property's market value can be gained. This not only allows for more precise valuations but also helps assess the behavioral factors affecting seller decisions, which appraiser data alone cannot address.
 
-Vestibulum at tortor ipsum. Quisque a elit ut odio suscipit fringilla ac ut nunc. Vivamus eget neque vel est iaculis sollicitudin in et turpis. Pellentesque quis risus ullamcorper metus porta viverra. In hac habitasse platea dictumst. In faucibus, sapien sed placerat semper, sapien lectus placerat leo, sit amet tempus risus dolor non erat. Morbi ac urna venenatis, pellentesque odio vel, iaculis tellus. Etiam tincidunt fringilla suscipit. Donec fermentum sollicitudin metus, quis tempor leo elementum eu.
+Sampling is a vital component of the survey process, as it determines the reliability and representativeness of the responses. A well-designed sampling strategy minimizes bias and ensures diverse data collection. Simple random sampling is ideal in many cases because it reduces systematic bias and ensures all properties have an equal chance of inclusion. This method is particularly feasible given the size of the Seattle property dataset. However, alternative approaches like stratified sampling might be necessary if the dataset has significant variability across neighborhoods or property types. For instance, stratified sampling could ensure equal representation of high-value and low-value neighborhoods, or newer and older properties, which might exhibit different characteristics.
 
-Duis sit amet augue sagittis, commodo eros sollicitudin, congue libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas convallis erat velit, eu consequat massa posuere et. Nullam tempor purus sit amet quam lacinia euismod. Praesent sagittis risus sit amet odio porttitor, eget pellentesque turpis luctus. Proin feugiat convallis diam, id vulputate mauris. Nunc facilisis quam nec tristique pellentesque. Sed laoreet tortor at ipsum faucibus iaculis. Sed cursus convallis molestie. Aliquam et accumsan tortor. Morbi volutpat rutrum elit sed fermentum. In vestibulum placerat eros, et consectetur lacus fringilla a. Mauris elementum velit vel eros placerat, eget commodo nisi convallis. Sed ac nisi mi. Nullam malesuada auctor semper.
+Additionally, expanding the sampling pool to include properties not currently listed on the market can improve the analysis. Data from these properties could offer insights into external factors like neighborhood desirability, local amenities, or proximity to planned infrastructure projects, as well as internal factors like deferred maintenance or owner sentiment about selling. A multi-stage sampling process could be employed, where neighborhoods are first selected based on certain characteristics (e.g., median income levels or recent development activity), followed by a random selection of properties within those neighborhoods. Responses from this expanded sample would help tune the model to reflect a broader range of scenarios, ultimately improving its robustness and applicability.
 
-Vestibulum at tortor ipsum. Quisque a elit ut odio suscipit fringilla ac ut nunc. Vivamus eget neque vel est iaculis sollicitudin in et turpis. Pellentesque quis risus ullamcorper metus porta viverra. In hac habitasse platea dictumst. In faucibus, sapien sed placerat semper, sapien lectus placerat leo, sit amet tempus risus dolor non erat. Morbi ac urna venenatis, pellentesque odio vel, iaculis tellus. Etiam tincidunt fringilla suscipit. Donec fermentum sollicitudin metus, quis tempor leo elementum eu.
+The survey will be administered in person, where surveyors will knock on each household in the sample's door to ensure detailed and accurate data collection, allowing interviewers to clarify questions. Participants will include property owners, both those currently selling and those who are not, to gather diverse perspectives. The survey will feature questions such as: 
+
+- "What year did you purchase the property, and at what price?"
+- "Have there been any significant renovations or upgrades?"
+- "Is the property fully furnished?"
+- "What motivated you to sell (if applicable)?"
+- "How would you rate your neighborhood on factors like safety, accessibility, and amenities?"
+- "What price range do you believe is fair for this property?" 
+
+These questions aim to uncover financial, sentimental, and qualitative factors influencing property valuation. This survey shares similarities with the American Housing Survey, which is another household survey that interviews all types of residents such as property managers, regular occupants, etc. [@ahs]
+
+Challenges to measurement include potential biases, such as response bias, where respondents may provide answers they perceive as favorable rather than accurate (e.g., overstating the quality of renovations). Additionally, respondents may have incomplete or inaccurate records of past transactions or upgrades. Interviewer bias is another concern, as the phrasing or tone of questions might unintentionally influence responses. Addressing these challenges involves careful question design, interviewer training, and cross-referencing self-reported data with available public records where possible.
 
 \newpage
 
