--- a/paper/references.bib
+++ b/paper/references.bib
@@ -164,3 +164,10 @@ issn = {0095-0696},
 doi = {https://doi.org/10.1016/0095-0696(79)90018-4},
 url = {https://www.sciencedirect.com/science/article/pii/0095069679900184},
 }
+
+@misc{ahs,
+  title = {American Housing Survey},
+  author = {U.S. Census Bureau},
+  year = {2021},
+  howpublished = {\url{https://www.census.gov/programs-surveys/ahs.html}},
+}
